# task-tracker

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260311_2336_add_user_table.py
app/: main.py
app/api/v1/: auth.py  router.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  user.py
app/repositories/: __init__.py  user_repository.py
app/schemas/: __init__.py  token.py  user.py
app/services/: __init__.py  auth_service.py
tests/: conftest.py
tests/integration/: test_auth.py  test_health.py
